# setto-server-sdk

./: README.md
cpp/: CMakeLists.txt  README.md
cpp/include/setto/: client.h  errors.h  types.h
cpp/src/: client.cpp  errors.cpp
csharp/: README.md  Setto.ServerSdk.sln
csharp/src/Setto.ServerSdk/: Setto.ServerSdk.csproj  SettoClient.cs  SettoError.cs
csharp/src/Setto.ServerSdk/Models/: Types.cs
go/: README.md  client.go  errors.go  go.mod  go.sum  integration.go  merchant.go  partner.go  payment.go  types.go  verifier.go
rust/: Cargo.toml  README.md
rust/src/: client.rs  errors.rs  lib.rs  types.rs
typescript/: README.md  package.json  tsconfig.json
typescript/src/: client.ts  errors.ts  index.ts  types.ts
