[package]
name = "setto-server-sdk"
version = "0.1.0"
edition = "2021"
description = "Setto Wallet Server SDK for Rust"
license = "MIT"
repository = "https://github.com/setto-labs/setto-server-sdk"
keywords = ["setto", "wallet", "payment", "sdk"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
jsonwebtoken = "9"
tokio = { version = "1", features = ["rt"] }
